--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "babel-eslint": "^8.2.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
@@ -25,7 +27,6 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "eslint-config-airbnb": "^16.1.0",
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
