--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "color": "^3.0.0",
     "expo": "^25.0.0",
+    "prop-types": "latest",
     "react": "16.2.0",
     "react-native": "0.52.0",
-    "prop-types": "latest",
     "react-native-extended-stylesheet": "latest"
   }
 }
