--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "eslint-plugin-react": "^7.7.0",
     "jest-expo": "25.0.0",
     "react-native-scripts": "1.11.1",
-    "react-test-renderer": "16.2.0"
+    "react-test-renderer": "16.2.0",
+    "moment": "latest"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
