--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "eslint-plugin-react": "^7.7.0",
     "jest-expo": "25.0.0",
     "react-native-scripts": "1.11.1",
-    "react-test-renderer": "16.2.0",
-    "moment": "latest"
+    "react-test-renderer": "16.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -33,6 +32,7 @@
     "prop-types": "latest",
     "react": "16.2.0",
     "react-native": "0.52.0",
-    "react-native-extended-stylesheet": "latest"
+    "react-native-extended-stylesheet": "latest",
+    "moment": "latest"
   }
 }
