Added options screen.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-extended-stylesheet": "latest",
-    "moment": "latest"
+    "moment": "latest",
+    "@expo/vector-icons": "latest"
   }
 }
